# ossbom

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json  startup.sh
.githooks/: pre-push
.github/: cicd.yaml  copilot-instructions.md
.github/actions/python-release/: action.yml
.github/workflows/: cicd.yaml  release.yml  scan_malware.yml  tag.yml  test-release.yml
ossbom/: README.md
ossbom/converters/: cyclonedx_converter.py  test_factory.py
ossbom/model/: component.py  environment.py  minicomponent.py  ossbom.py  test_component.py  test_dependency_env.py  test_minicomponent.py  test_ossbom.py  test_vulnerability.py  vulnerability.py
ossbom/tests/: test_utility.py
