[tool.poetry]
name = "ossbom"
version = "0.1.0"
description = "Main public API"
authors = ["dreadnought"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cyclonedx-python-lib = {extras = ["json-validation"], version = "^8.4.0"}
poetry-plugin-export = "^1.9.0"
packageurl-python = "^0.16.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
taskipy = "^1.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 120  # or your preferred length

[tool.taskipy.tasks]
test = "poetry run pytest"
